<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_language"
        android:layout_width="168dp"
        android:layout_height="42dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="176dp"
        android:text="@string/res_language"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleGroupUnits2" />

    <TextView
        android:id="@+id/text_units"
        android:layout_width="132dp"
        android:layout_height="37dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="176dp"
        android:text="@string/res_units"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroupUnits1"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="118dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_units"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/button_km"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/unselected_blue"
            android:text="@string/res_km"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_mil"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/unselected_blue"
            android:text="@string/res_mil"
            android:textAlignment="center" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroupUnits2"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="118dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleGroupUnits1"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/button_celsius"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/unselected_blue"
            android:text="@string/res_celsius"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_fahrenheit"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/unselected_blue"
            android:text="@string/res_fahrenheit"
            android:textAlignment="center" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroupLanguage"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="118dp"
        app:checkedButton="@id/button_english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_language"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/button_polish"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/unselected_blue"
            android:text="@string/res_polish"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_english"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/unselected_blue"
            android:text="@string/res_english"
            android:textAlignment="center" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>