<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_other"
        android:icon="@drawable/ic_other_black_24"
        android:title="@string/title_other" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/label_settings" />

</menu>