<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_foreground"
        android:title="@string/res_refresh"
        app:showAsAction="ifRoom" />

</menu>